--- a/main.html
+++ b/main.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="lib/css/bootstrap.css" rel="stylesheet">
-        <link href="lib/css/font-awesome.min.css" rel="stylesheet">
-        <link href="src/css/jasxxws.css" rel="stylesheet">
-    </head>
-    <body>
-     <div id="wrapper">
+
+<head>
+    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="lib/css/bootstrap.css" rel="stylesheet">
+    <link href="lib/css/font-awesome.min.css" rel="stylesheet">
+    <link href="src/css/jasxxws.css" rel="stylesheet">
+</head>
+
+<body>
+    <div id="wrapper">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -82,10 +84,10 @@
                         <a href="index.html"><i class="fa fa-fw fa-home"></i> 首页</a>
                     </li>
                     <li>
-                        <a href="charts.html"><i class="fa fa-fw fa-list-ul"></i> 事件管理</a>
+                        <a href="/src/html/event.html"><i class="fa fa-fw fa-list-ul"></i> 事件管理</a>
                     </li>
                     <li>
-                        <a href="tables.html"><i class="fa fa-fw fa-file"></i> 任务管理</a>
+                        <a href="/src/html/task.html"><i class="fa fa-fw fa-file"></i> 任务管理</a>
                     </li>
                     <li>
                         <a href="forms.html"><i class="fa fa-fw fa-map-marker"></i> 一张图</a>
@@ -136,7 +138,7 @@
                     <div class="col-lg-12">
                         <div class="alert alert-info alert-dismissable">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                            <i class="fa fa-info-circle"></i>  <strong>Like SB Admin?</strong> Try out <a href="http://startbootstrap.com/template-overviews/sb-admin-2" class="alert-link">SB Admin 2</a> for additional features!
+                            <i class="fa fa-info-circle"></i> <strong>Like SB Admin?</strong> Try out <a href="http://startbootstrap.com/template-overviews/sb-admin-2" class="alert-link">SB Admin 2</a> for additional features!
                         </div>
                     </div>
                 </div>
@@ -393,5 +395,6 @@
     </div>
     <script src="lib/js/jquery-1.12.4.min.js"></script>
     <script src="lib/js/bootstrap.min.js"></script>
-    </body>
+</body>
+
 </html>
