--- a/enroll.html
+++ b/enroll.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="src/css/enroll.css" rel="stylesheet">
+    <link href="src/css/loginCommon.css" rel="stylesheet">
 </head>
 
 <body>
