--- a/src/html/event.html
+++ b/src/html/event.html
@@ -304,7 +304,7 @@
         <!-- /#page-wrapper -->
     </div>
     <!--详情窗口-->
-    <div id="details" class="modal fade in" style="display: none">
+    <div id="details" class="modal fade in" data-backdrop="static">
         <div class="modal-header">
             <h3>件事详情<a class="close" data-dismiss="modal">×</a></h3>
         </div>
@@ -347,47 +347,110 @@
         </div>
     </div>
     <!--/详情窗口-->
+
     <!--新建事件窗口-->
-    <div id="addEvent" class="modal fade in">
+    <div id="addEvent" class="modal fade in" data-backdrop="static">
         <div class="modal-header">
             <h3>新建事件<a class="close" data-dismiss="modal">×</a></h3>
         </div>
         <div class="modal-body">
             <form>
                 <div class="event_form">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-md-2 col-sm-2 text-right">
+                    <div class="form_list">
+                        <div class="form_part">
+                            <div class="list_left text-right">
                                 事件类型
                             </div>
-                            <div class="col-md-4 col-sm-4"></div>
-                            <div class="col-md-2 col-sm-2 text-right">
-                                事件事件
-                            </div>
-                            <div class="col-md-4 col-sm-4">
-                                <input type="text">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-2 col-sm-2 text-right">地理位置</div>
-                            <div class="col-md-10 col-sm-10">
-                                <input type="text" class="form-control">
+                            <div class="list_right">
+                                <select class="form-control">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                    <option>5</option>
+                                </select>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-2 col-sm-2 text-right">事件描述</div>
-                            <div class="col-md-10 col-sm-10">
-                                <textarea rows="" cols="" class="form-control"></textarea>
+                        <div class="form_part">
+                            <div class="list_left text-right">
+                                事件时间
+                            </div>
+                            <div class="list_right has-feedback">
+                                <input type="text" class="form-control form_datetime" readonly id="datetime">
+                                <span class="form-control-feedback" aria-hidden="true">
+                                    <img src="/src/images/event/time.png" alt="">
+                                </span>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-2 col-sm-2 text-right">照片</div>
-                            <div class="col-md-10 col-sm-10"></div>
+                    </div>
+                    <div class="form_list">
+                        <div class="list_left text-right">
+                            地理位置
                         </div>
-                        <div class="row">
-                            <div class="col-md-2 col-sm-2 text-right">是否报送</div>
-                            <div class="col-md-10 col-sm-10">
-
+                        <div class="list_right has-feedback">
+                            <input type="text" data-toggle="modal" class="form-control map_address" placeholder="请在地图上选取位置" readonly>
+                            <span class="form-control-feedback" aria-hidden="true">
+                                    <img src="/src/images/event/map_r.png" alt="">
+                                </span>
+                        </div>
+                    </div>
+                    <div class="form_line"></div>
+                    <div class="form_list">
+                        <div class="list_left text-right">
+                            事件描述
+                        </div>
+                        <div class="list_right">
+                            <textarea rows="" cols="" class="form-control"></textarea>
+                        </div>
+                    </div>
+                    <div class="form_list">
+                        <div class="list_left text-right">
+                            照片
+                        </div>
+                        <div class="list_right">
+                            <div class="feedback_img">
+                                <div class="feedback_img_list">
+                                    <div class="feedback_images">
+                                        <img src="/src/images/event/close.png" alt="" />
+                                        <span onclick="closeImg(this);"></span>
+                                    </div>
+                                </div>
+                                <div class="feedback_img_add">
+                                    <span class="addImg"><img src="/src/images/event/upload.png" alt=""></span>
+                                    <input type="file" onchange="handleFiles(this);" id="upload" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form_list">
+                        <div class="list_left text-right">
+                            是否报送
+                        </div>
+                        <div class="list_right">
+                            <div class="form_radio">
+                                <div class="form_radio_l">
+                                    <span class="pay_list_c1 on">
+                                        <input type="radio" id="radio_yse" checked="checked" form="event_refer1" name="radio" value="20" class="radioclass">
+                                    </span>
+                                    <label class="" for="radio_yse">是</label>
+                                </div>
+                                <div class="form_radio_r has-feedback">
+                                    <input type="text" class="form-control" placeholder="请选择报送人" readonly>
+                                    <span class="form-control-feedback" aria-hidden="true">
+                                        <img src="/src/images/event/slaff.png" alt="">
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="form_radio">
+                                <div class="form_radio_l">
+                                    <span class="pay_list_c1">
+                                        <input type="radio" id="radio_no" form="event_refer1" name="radio" value="30" class="radioclass">
+                                    </span>
+                                    <label class="" for="radio_no">否</label>
+                                </div>
+                                <div class="form_radio_r">
+                                    <p>事件将会直接关闭</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -400,6 +463,21 @@
         </div>
     </div>
     <!--/新建事件窗口-->
+
+    <!--map-->
+    <div class="modal fade in" data-backdrop="static" id="event_address">
+        <div class="modal-header">
+            <h3>地理位置<a class="close" data-dismiss="modal">×</a></h3>
+        </div>
+        <div class="modal-body">
+            <div id="address_map"></div>
+        </div>
+        <div class="modal-footer">
+            <span>标记位置：</span>
+            <input type="text" name="map_address">
+            <button class="btn">确定</button>
+        </div>
+    </div>
     <script type="text/javascript" src="/lib/js/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="/lib/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/lib/js/bootstrap-table.min.js"></script>
@@ -407,9 +485,19 @@
     <script type="text/javascript" src="/src/js/event/bootstrap-datetimepicker.min.js"></script>
     <script type="text/javascript" src="/src/js/event/bootstrap-modal.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=FaToVuVSNebaox7B0uLYEKhPH8Fpu7Rr"></script>
+    <script type="text/javascript" src="/src/js/event/upload.js"></script>
     <script type="text/javascript" src="/src/js/event/event.js"></script>
 
     <script type="text/javascript">
+        $('#datetime').datetimepicker({
+            weekStart: 1,
+            todayBtn: 1,
+            autoclose: 1,
+            todayHighlight: 1,
+            startView: 2,
+            forceParse: 0,
+            showMeridian: 1
+        });
         $("#datetimeStart").datetimepicker({
             format: 'yyyy-mm-dd',
             minView: 'month',
@@ -435,45 +523,6 @@
          * Created by raid on 2017/2/20.
          */
         $(function() {
-
-            //百度地图API功能
-            //加载第一张地图
-            var mapEvent = new BMap.Map("event_map"); // 创建Map实例
-            var point1 = new BMap.Point(116.404, 38.915);
-            mapEvent.centerAndZoom(point1, 15);
-            mapEvent.enableScrollWheelZoom(); //启用滚轮放大缩小
-
-            var top_right_navigation = new BMap.NavigationControl({
-                anchor: BMAP_ANCHOR_BOTTOM_RIGHT,
-                type: BMAP_NAVIGATION_CONTROL_SMALL
-            }); //右上角，仅包含平移和缩放按钮
-            mapEvent.addControl(top_right_navigation);
-
-
-
-            // $(function() {
-            // navigator.geolocation.getCurrentPosition(translatePoint); //定位 /
-            // });
-
-
-            var geolocation = new BMap.Geolocation();
-            geolocation.getCurrentPosition(function(r) {
-                if (this.getStatus() == BMAP_STATUS_SUCCESS) {
-                    var myIcon = new BMap.Icon("/src/images/event/personal.png", new BMap.Size(130, 130));
-                    var mk = new BMap.Marker(r.point, {
-                        icon: myIcon
-                    });
-                    mapEvent.addOverlay(mk);
-                    mapEvent.panTo(r.point);
-                    // alert('您的位置：' + r.point.lng + ',' + r.point.lat);
-                } else {
-                    alert('failed' + this.getStatus());
-                }
-            }, {
-                enableHighAccuracy: true
-            })
-
-
 
             window.operateEvents = {
                 'click .location': function(e, value, row, index) {
@@ -671,10 +720,13 @@
                 });
             }
             */
+
+
             function initTable() {
                 $.get('event.json', function(data0) {
                     // console.log(data0);
                     /*bootstrap table*/
+
                     $('#table').bootstrapTable({
                         // url: "event.json", //请求数据url
                         data: data0,
@@ -688,8 +740,8 @@
                         pagination: true, //分页
                         sidePagination: 'client', //分页方式：client客户端分页，server服务端分页（*）
                         pageNumber: 1,
-                        pageSize: 5,
-                        pageList: [5, 10, 20, 50], //分页步进值
+                        pageSize: 10,
+                        pageList: [10, 20, 50], //分页步进值
                         search: true, //显示搜索框
                         searchOnEnterKey: true,
                         queryParams: function(params) {
@@ -802,6 +854,7 @@
             }
 
             function operateFormatter(value, row, index) {
+
                 return [
                     '<a class="location" href="javascript:void(0)" title="定位">',
                     '<i class="glyphicon glyphicon-map-marker"></i>',
