--- a/forget.html
+++ b/forget.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="src/css/forget.css" rel="stylesheet">
-    <link href="src/css/loginCommon.css" rel="stylesheet">
+    <link href="/src/css/forget.css" rel="stylesheet">
+    <link href="/src/css/loginCommon.css" rel="stylesheet">
 </head>
 
 <body>
@@ -61,9 +61,10 @@
         </div>
     </div>
     <p class="words">北京中盈安信技术服务股份有限公司旗下网站：巡线卫士<span>©</span>2016 京 B2-20080224-16</p>
-    <script src=" lib/js/jquery-1.12.4.min.js "></script>
-    <script src="lib/js/bootstrap.min.js "></script>
-    <script src="src/js/login/forget.js"></script>
+    <script src="/lib/js/jquery-1.12.4.min.js "></script>
+    <script src="/lib/js/bootstrap.min.js "></script>
+    <script src="/src/js/login/forget.js"></script>
+    <script src="/src/js/common/md5.js"></script>
     <script>
     </script>
 </body>
