--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
         <title>巡线卫士</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style src="src/css/index.css"></style>
-        <link rel="stylesheet" href="src/css/index.css">
-        <script src="src/js/common/html5-storage.js"></script>
     </head>
     <body>
-        asssssssssssssssssssssssdasda sd asd asd asd asd asd asd asd asd asd asd asd as
+    <script src="lib/js/jquery-1.12.4.min.js"></script>
+    <script src="src/js/common/html5-storage.js"></script>
+    <script type="text/javascript">
+    $(document).ready(function(){
+         if(lsObj.getLocalStorage('token') != undefined && lsObj.getLocalStorage('token') != ""){
+               location.href = 'main.html';
+         }
+         else{
+               location.href = 'login.html';
+         }             
+    });
+    </script>
     </body>
 </html>
