--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="src/css/login.css" rel="stylesheet">
+    <link href="/src/css/login.css" rel="stylesheet">
 </head>
 
 <body>
@@ -33,9 +33,11 @@
         </div>
         <p class="words">北京中盈安信技术服务股份有限公司旗下网站：巡线卫士<span>©</span>2016 京 B2-20080224-16</p>
     </div>
-    <script src=" lib/js/jquery-1.12.4.min.js "></script>
-    <script src="lib/js/bootstrap.min.js "></script>
-    <script src="src/js/login/login.js"></script>
+    <script src="/lib/js/jquery-1.12.4.min.js "></script>
+    <script src="/lib/js/bootstrap.min.js "></script>
+    <script src="/src/js/common/md5.js"></script>
+    <script src="/src/js/common/html5-storage.js"></script>
+    <script src="/src/js/login/login.js"></script>
     <script>
     </script>
 </body>
